// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Component only opens one section at a time 1`] = `
<ul>
  <li>
    <button
      onClick={[Function]}
      type="button"
    >
      Section 1
    </button>
  </li>
  <li>
    <button
      onClick={[Function]}
      type="button"
    >
      Section 2
    </button>
  </li>
  <li>
    <button
      onClick={[Function]}
      type="button"
    >
      Section 3
    </button>
    <p>
      Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?
    </p>
  </li>
</ul>
`;

exports[`Accordion Component opens any clicked section 1`] = `
<ul>
  <li>
    <button
      onClick={[Function]}
      type="button"
    >
      Section 1
    </button>
  </li>
  <li>
    <button
      onClick={[Function]}
      type="button"
    >
      Section 2
    </button>
    <p>
      Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!
    </p>
  </li>
  <li>
    <button
      onClick={[Function]}
      type="button"
    >
      Section 3
    </button>
  </li>
</ul>
`;

exports[`Accordion Component renders the no sections by default 1`] = `
<ul>
  <li>
    <button
      onClick={[Function]}
      type="button"
    >
      Section 1
    </button>
  </li>
  <li>
    <button
      onClick={[Function]}
      type="button"
    >
      Section 2
    </button>
  </li>
  <li>
    <button
      onClick={[Function]}
      type="button"
    >
      Section 3
    </button>
  </li>
</ul>
`;
